-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-ppc-aix
-
Component/s: hotspot
-
None
-
master
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8033048 | 9 | Goetz Lindenmaier | P4 | Resolved | Fixed | b04 |
| JDK-8045352 | 8u25 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8038550 | 8u20 | Goetz Lindenmaier | P4 | Resolved | Fixed | b08 |
| JDK-8053460 | emb-8u26 | Goetz Lindenmaier | P4 | Resolved | Fixed | b17 |
fixup_flow can add new blocks with a branch instruction. Doing
so after a trap based check added the branch behind the wrong
Proj node. The branch would jump to the proper target, but build_oop_map
analyses a wrong control flow.
Fix: Swap the Projs in the block list so that the new block is added behind
the proper node.
so after a trap based check added the branch behind the wrong
Proj node. The branch would jump to the proper target, but build_oop_map
analyses a wrong control flow.
Fix: Swap the Projs in the block list so that the new block is added behind
the proper node.
- backported by
-
JDK-8033048 Fix for 8029015: PPC64 (part 216): opto: trap based null and range checks
-
- Resolved
-
-
JDK-8038550 Fix for 8029015: PPC64 (part 216): opto: trap based null and range checks
-
- Resolved
-
-
JDK-8045352 Fix for 8029015: PPC64 (part 216): opto: trap based null and range checks
-
- Resolved
-
-
JDK-8053460 Fix for 8029015: PPC64 (part 216): opto: trap based null and range checks
-
- Resolved
-