8031188: Fix for 8029015: PPC64 (part 216): opto: trap based null and range checks

Swap the Projs in the block list so that the new block is added behind the proper node.

Reviewed-by: kvn